--- a/requirements.txt
+++ b/requirements.txt
@@ -23,6 +23,7 @@ mpmath==1.3.0
 networkx==3.1
 numpy==1.24.4
 omegaconf==2.3.0
+opencv-python-headless
 opencv-python==4.10.0.84
 packaging==24.1
 pandas==2.0.3
